--- a/app/design/frontend/foundation/default/template/checkout/onepage/review/button.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/onepage/review/button.phtml
@@ -1,1 +1,2 @@
-<button type="submit" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Place Order')) ?>" class="button" onclick="review.save();"><?php echo $this->__('Place Order %s', Mage::helper('core')->currency(Mage::getSingleton('checkout/session')->getQuote()->getGrandTotal(), true, false)); ?></button>
+<button type="submit" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Place Order')) ?>" class="button"
+        onclick="review.save();"><?php echo $this->__('Place Order %s', Mage::helper('core')->currency(Mage::getSingleton('checkout/session')->getQuote()->getGrandTotal(), true, false)); ?></button>
