--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -45,7 +45,7 @@
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'leasing-mietkauf')); ?>"><?php echo $this->__('Finanzierung %') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'lieferung')); ?>"><?php echo $this->__('Lieferung') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'versandkosten')); ?>"><?php echo $this->__('Versandkosten') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten')); ?>"><?php echo $this->__('Zahlungsarten') ?></a>
