--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -30,7 +30,7 @@
                 <p><?php echo $this->__('Informationen') ?></p>
                 <ul>
                     <li>
-                        <a href="<?php echo Mage::getUrl(''); ?>"><?php echo $this->__('Startseite') ?></a>
+                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'lieferung')); ?>"><?php echo $this->__('Versandkosten') ?></a>
                     </li>
                     <li>
                         <a class="quality"><?php echo $this->__('Sicher einkaufen') ?></a>
@@ -43,9 +43,6 @@
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'leasing-mietkauf')); ?>"><?php echo $this->__('Finanzierung %') ?></a>
-                    </li>
-                    <li>
-                        <a href="<?php echo Mage::getUrl('', array('_direct' => 'versandkosten')); ?>"><?php echo $this->__('Versandkosten') ?></a>
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'zahlungsarten')); ?>"><?php echo $this->__('Zahlungsarten') ?></a>
@@ -66,6 +63,9 @@
                     </li>
                     <li>
                         <a href="<?php echo Mage::getUrl('', array('_direct' => 'referenzen')); ?>"><?php echo $this->__('Referenzen') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl(''); ?>"><?php echo $this->__('Startseite') ?></a>
                     </li>
                 </ul>
                 <div class="reveal large" id="quality" data-reveal></div>
